# bian-rs

./: Cargo.toml  README.md  build_doc.sh  index.md
bian-core/: Cargo.toml
bian-core/src/: error.rs  lib.rs
bian-proc/: Cargo.toml
bian-proc/src/: lib.rs
src/: enums.rs  error.rs  lib.rs  params.rs  response.rs
src/client/: coin_futures.rs  mod.rs  spot.rs  usd_futures.rs
src/response/: http.rs  mod.rs  ws.rs
tests/: d_http.rs  spot_http.rs  u_http.rs  u_websocket.rs
