[package]
name = "bian-rs"
version = "0.1.0"
authors = ["PrivateRookie <996514515@qq.com>"]
edition = "2018"
description = "币安 Rust async SDK | binance Rust async SDK"
license-file = "LICENSE"
readme = "README.md"
homepage = 'https://github.com/PrivateRookie/bian-rs'
repository = 'https://github.com/PrivateRookie/bian-rs'
keywords = ["Binance", "数字货币", "币安"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2.0", features = ["full"] }
reqwest = { version = "0.11.1", features = ["json"] }
hmac = "0.10.1"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.64"
serde_qs = "0.8"
url = "2.2.1"
dotenv = "0.15.0"
hex = "0.4.3"
sha2 = "0.9.3"
chrono = { version = "0.4", features = ["serde"] }
bian-proc = { path = "./bian-proc", version = "0.1" }
tungstenite = { git = "https://github.com/PrivateRookie/tungstenite-rs.git", branch = "proxy" }
thiserror = "1"

[workspace]
members = [".", "./bian-proc"]
